--- a/assets/sass/components/_image.scss
+++ b/assets/sass/components/_image.scss
@@ -1,5 +1,5 @@
 ///
-/// Editorial by HTML5 UP
+/// Solid State by HTML5 UP
 /// html5up.net | @ajlkn
 /// Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 ///
@@ -42,7 +42,6 @@
 			display: block;
 			margin: 0 0 _size(element-margin) 0;
 			width: 100%;
-
 			img {
 				width: 100%;
 			}
@@ -55,20 +54,6 @@
 
 			img {
 				width: 100%;
-			}
-		}
-	}
-
-	a.image {
-		overflow: hidden;
-
-		img {
-			@include vendor('transition', 'transform #{_duration(transition)} ease');
-		}
-
-		&:hover {
-			img {
-				@include vendor('transform', 'scale(1.075)');
 			}
 		}
 	}
